<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5E17EB"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="297dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="11dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/enterAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/topnew" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="410dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="29dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitButton"
        app:srcCompat="@drawable/image4" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="10dp"
        android:text="FIND YOUR MATCH!"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/resetButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterAge" />

    <Button
        android:id="@+id/resetButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:text="Reset"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/submitButton"
        app:layout_constraintTop_toBottomOf="@+id/enterAge" />

    <EditText
        android:id="@+id/enterAge"
        android:layout_width="246dp"
        android:layout_height="58dp"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Enter your age "
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textOutput"
        android:layout_width="213dp"
        android:layout_height="279dp"
        android:gravity="center_vertical"
        android:text="Waiting for your age"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.305" />

</androidx.constraintlayout.widget.ConstraintLayout>